# echo-plugins

./: .gitignore  .gitmodules  README.md
empty/: CMakeLists.txt
empty/src/: CMakeLists.txt  DllMain.cpp  DllMain.h
houdini/: CMakeLists.txt  HoudiniEngine.plugin
houdini/res/hda/: biome_c1.hda  building.hda
houdini/res/hip/: biome_c1.hip  hengine_lesson.hip
houdini/src/: CMakeLists.txt  DllMain.cpp  DllMain.h  HoudiniModule.cpp  houdini_module.cpp  houdini_module.h
houdini/src/Api/: HoudiniApi.cpp  HoudiniApi.h
houdini/src/Test/: GeoisoSurface.cpp  HAPISession.cpp  HAPISession.h
