# Set Module Name
SET(MODULE_NAME Houdini)

MESSAGE( STATUS "Configuring module: ${MODULE_NAME} ...")

# include diirectories
INCLUDE_DIRECTORIES( ${BIG_NUMBER_ROOT_PATH})
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/../thirdparty/win64/include)

# link directories
LINK_DIRECTORIES(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

# query all files
FILE( GLOB_RECURSE HEADER_FILES *.h *.inl)
FILE( GLOB_RECURSE SOURCE_FILES *.c *.cpp *.mm)

SET(ALL_FILES ${HEADER_FILES} ${SOURCE_FILES})

# group
GROUP_FILES(ALL_FILES ${CMAKE_CURRENT_SOURCE_DIR})

# add library
ADD_LIBRARY(${MODULE_NAME} SHARED ${ALL_FILES})

# set target properties
SET_TARGET_PROPERTIES(${MODULE_NAME} PROPERTIES FOLDER "")

# Link libraries
TARGET_LINK_LIBRARIES(${MODULE_NAME})

# succeed message
MESSAGE(STATUS "Configure ${MODULE_NAME} success!")
